Client Logo / Icon Add

--- a/about-us.html
+++ b/about-us.html
@@ -88,8 +88,8 @@
                                         </div>
                                         <ul class="nav-links nav navbar-nav">
                                             <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
-                                            <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                             <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
+                                            <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                             <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -263,7 +263,7 @@
                                     </div>
                                     <div data-wow-delay="0.2s" class="client-slick-2 slick-vertical wow fadeIn">
                                         <div class="client-item">
-                                            <div class="avatar"><img src="assets/img/avatar/avatar-01.jpg" alt="" class="img-respsonive"></div>
+                                            <div class="avatar"><img src="assets/img/User-icon.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
                                                 <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
@@ -271,7 +271,7 @@
                                             </div>
                                         </div>
                                         <div class="client-item">
-                                            <div class="avatar"><img src="assets/img/avatar/avatar-01.jpg" alt="" class="img-respsonive"></div>
+                                            <div class="avatar"><img src="assets/img/user-icon-2.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
                                                 <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
@@ -279,7 +279,7 @@
                                             </div>
                                         </div>
                                         <div class="client-item">
-                                            <div class="avatar"><img src="assets/img/avatar/avatar-01.jpg" alt="" class="img-respsonive"></div>
+                                            <div class="avatar"><img src="assets/img/user-icon-1.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
                                                 <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
@@ -297,22 +297,22 @@
                                     <div class="slide-logo-wrapper">
                                         <div class="slide-logo-inner">
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-1.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-1-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-1.png" alt="" class="img-responsive"><img src="assets/img/company-logo-1.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-2.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-2-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-2.png" alt="" class="img-responsive"><img src="assets/img/company-logo-2.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-3.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-3-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-3.png" alt="" class="img-responsive"><img src="assets/img/company-logo-3.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-4.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-4-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-4.png" alt="" class="img-responsive"><img src="assets/img/company-logo-4.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-5.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-5-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-5.png" alt="" class="img-responsive"><img src="assets/img/company-logo-5.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                             <div class="item">
-                                                <a href="#"><img src="assets/img/logo/logo-6.png" alt="" class="img-responsive"><img src="assets/img/logo/logo-6-hover.png" alt="" class="img-responsive hover"></a>
+                                                <a href="#"><img src="assets/img/company-logo-7.png" alt="" class="img-responsive"><img src="assets/img/company-logo-7.png" alt="" class="img-responsive hover"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -379,7 +379,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; Nerdism</div>
+                        <div class="text">&copy;2017 Nerdism</div>
                     </div>
                 </div>
             </footer>
