--- a/contact.html
+++ b/contact.html
@@ -197,16 +197,17 @@
                         <div class="container">
                             <div class="footer-main-wrapper">
                                 <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="about-us-widget widget">
                                             <div class="footer-logo"><img src="assets/img/logo.png" alt="" /></div>
                                             <div class="content-widget">
-                                                <div class="text">Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore.</div>
-                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link pinterest"><i class="fa fa-pinterest-p"></i></a><a href="#" class="link google"><i class="fa fa-google"></i></a></div>
+                                                <div class="text">NERDISM - (noun)</div>
+                                                <div class="text">The practices or behaviors of nerds; nerdiness.</div>
+                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="contact-us-widget widget">
                                             <div class="title-widget">contact us</div>
                                             <div class="content-widget">
@@ -220,41 +221,23 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="twitter-widget widget">
-                                            <div class="title-widget">Twitter widget</div>
+                                            <div class="title-widget">Services</div>
                                             <div class="content-widget">
                                                 <div class="recent-list">
                                                     <ul class="list-unstyled">
                                                         <li>
-                                                            <div class="text">Looking for awesome PSD template?</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
-                                                        </li>
-                                                        <li>
-                                                            <div class="text">You need an image stock</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
+                                                            <div class="text">Web Design & Development</div>
+                                                            <div class="text">Software Design & Development</div>
+                                                            <div class="text">Branding</div>
+                                                            <div class="text">Copywriting</div>
+                                                            <div class="text">App Development</div>
+                                                            <div class="text">Social Media</div>
+                                                            <div class="text">SEO</div>
+                                                            <div class="text">General Nerdiness</div>
                                                         </li>
                                                     </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="gallery-widget widget">
-                                            <div class="title-widget">Gallery</div>
-                                            <div class="content-widget">
-                                                <div class="gallery-wrapper">
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,7 +265,6 @@
     <script src="assets/libs/fancybox/source/jquery.fancybox.pack.js"></script>
     <script src="assets/libs/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
     <!-- LOADING JS FOR PAGE-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu6tm60TzeUo9rWpLnrQ7mrFn4JPMVje4&amp;amp;sensor=false"></script>
     <script src="assets/js/pages/contact.js"></script>
     <!-- MAIN JS-->
     <script src="assets/js/main.js"></script>
