--- a/about-us.html
+++ b/about-us.html
@@ -335,7 +335,7 @@
                                             <div class="content-widget">
                                                 <div class="text">NERDISM - (noun)</div>
                                                 <div class="text">The practices or behaviors of nerds; nerdiness.</div>
-                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a></div>
+                                                <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
