--- a/branding.html
+++ b/branding.html
@@ -450,6 +450,8 @@
                                     <div class="col-sm-4">
                                         <div class="footer-logo"><img src="assets/img/logo.png" alt="" />
                                             <div class="text">Nerdism</div>
+                                            <div class="text">The practices or behaviors of nerds; nerdiness.</div>
+                                            <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link linkedin"><i class="fa fa-linkedin"></i></a></div>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
