Services Pic Add

--- a/services.html
+++ b/services.html
@@ -229,7 +229,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-2.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/services-8.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">01. Consult</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
@@ -239,7 +239,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-3.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/service-3.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">02. Brainstorm</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
@@ -249,7 +249,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-3.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/service-9.png" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">03. Design</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
@@ -259,7 +259,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-4.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/service-4.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">04. Development</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
@@ -269,7 +269,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-5.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/service-2.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">05. Testing</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
@@ -279,7 +279,7 @@
                                             <div class="col-sm-6">
                                                 <div class="working-flow-widget">
                                                     <div class="box-img">
-                                                        <a href="#" class="icons"><img src="assets/img/service/service-5.jpg" alt="" class="img-responsive"></a>
+                                                        <a href="#" class="icons"><img src="assets/img/service-10.png" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">06. Launch</a>
                                                         <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
