P tag / Fun Facts Change

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">01</div><a href="#" class="icons"><i class="alab-ux-ui"></i></a>
+                                                                        <div class="number icon-1">01</div>
+                                                                        <p class="icons"><i class="alab-ux-ui"></i></p>
                                                                         <p class="title">UX / UI Design</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -174,7 +175,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">02</div><a href="#" class="icons"><i class="alab-web-developing"></i></a>
+                                                                        <div class="number icon-1">02</div>
+                                                                        <p class="icons"><i class="alab-web-developing"></i></p>
                                                                         <p class="title">Web Developing</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -187,7 +189,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">03</div><a href="#" class="icons"><i class="alab-threed-studio"></i></a>
+                                                                        <div class="number icon-1">03</div>
+                                                                        <p class="icons"><i class="alab-threed-studio"></i></p>
                                                                         <p class="title">Branding</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -200,7 +203,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">04</div><a href="#" class="icons"><i class="alab-app-development"></i></a>
+                                                                        <div class="number icon-1">04</div>
+                                                                        <p class="icons"><i class="alab-app-development"></i></p>
                                                                         <p class="title">App Development</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -213,7 +217,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">05</div><a href="#" class="icons"><i class="alab-creative-process"></i></a>
+                                                                        <div class="number icon-1">05</div>
+                                                                        <p class="icons"><i class="alab-creative-process"></i></p>
                                                                         <p class="title">Copywriting</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -226,7 +231,8 @@
                                                             <div data-wow-delay="0.2s" class="box-media layout-2 wow fadeIn">
                                                                 <div class="box-media-wrapper">
                                                                     <div class="box-icon">
-                                                                        <div class="number icon-1">06</div><a href="#" class="icons"><i class="alab-software"></i></a>
+                                                                        <div class="number icon-1">06</div>
+                                                                        <p class="icons"><i class="alab-software"></i></p>
                                                                         <p class="title">Software</p>
                                                                     </div>
                                                                     <div class="box-info">
@@ -386,8 +392,8 @@
                                                             <div class="box-item">
                                                                 <div class="box-icon"><span class="alab-speech-bubble-and-three-dots"></span></div>
                                                                 <div class="box-info">
-                                                                    <div data-count="2987" class="number">0</div>
-                                                                    <div class="title">Ridiculous Things Said</div>
+                                                                    <div data-count="5676" class="number">0</div>
+                                                                    <div class="title">Nerd Conversations</div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -396,7 +402,7 @@
                                                                 <div class="box-icon"><i class="alab-writing-notes"></i></div>
                                                                 <div class="box-info">
                                                                     <div data-count="947" class="number">0</div>
-                                                                    <div class="title">Coffee Consumed (Cups)</div>
+                                                                    <div class="title">Coffee Consumed</div>
                                                                 </div>
                                                             </div>
                                                         </div>
