--- a/services.html
+++ b/services.html
@@ -158,19 +158,19 @@
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
                                                     <div class="box-icon"><a href="#" class="icons"><i class="alab-app-development"></i></a></div><a href="#" class="title">App Development</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
+                                                    <div class="text">Bringing your idea to a mobile specific world brings an ease of use to the consumer.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
                                                     <div class="box-icon"><a href="#" class="icons"><i class="alab-creative-process"></i></a></div><a href="#" class="title">Copywriting</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore.</div>
+                                                    <div class="text">We deliver the verbal content that accompanies the visual elements.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
                                                     <div class="box-icon"><a href="#" class="icons"><i class="alab-software"></i></a></div><a href="#" class="title">Software</a>
-                                                    <div class="text">Consect adipisicing elitsed do eiusmod sed do eiusmod tempor incididunt ut labore. </div>
+                                                    <div class="text">We can design, develop new software, or edit and make existing software better.</div>
                                                 </div>
                                             </div>
                                             <div class="clearfix"> </div>
