--- a/about-us.html
+++ b/about-us.html
@@ -136,12 +136,12 @@
                                         <div class="row">
                                             <div class="col-sm-4">
                                                 <div class="heading">Who we are?</div>
-                                                <div class="text">Consect adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
-                                                <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.</div>
+                                                <div class="text">NERDISM - (noun) The practices or behaviors of nerds; nerdiness.</div>
+                                                <div class="text">We are a creative design and development firm in Saint Louis, founded by people who believe that functionality and beauty can be integrated to make something special we can use to further your business or personal brand.</div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="heading">What we do?</div>
-                                                <div class="text">Consect adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                                                <div class="text">We take your idea or existing business and bring it to the world in way that grabs the attention of the consumer, and magnifies your product so you can increase profitability.</div>
                                                 <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.</div>
                                             </div>
                                             <div class="col-sm-4">
@@ -167,7 +167,6 @@
                                                     <div class="slide-gallery">
                                                         <div class="gallery-item"><img src="assets/img/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
                                                         <div class="gallery-item"><img src="assets/img/slide-vertical-2.jpg" alt="" class="img-responsive"></div>
-                                                        <div class="gallery-item"><img src="assets/img/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
                                                     </div>
                                                     <div class="nav-slide-gallery"> </div>
                                                 </div>
