Why Choose Labels

--- a/about-us.html
+++ b/about-us.html
@@ -194,7 +194,7 @@
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
                                                                 <div class="box-icon"><span class="fa fa-bar-chart-o"></span></div>
                                                                 <div class="box-info">
-                                                                    <div class="title">Unlimited Features</div>
+                                                                    <div class="title">CUSTOMER SERVICE</div>
                                                                     <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
                                                                 </div>
                                                             </div>
@@ -212,7 +212,7 @@
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
                                                                 <div class="box-icon"><span class="fa fa-paper-plane"></span></div>
                                                                 <div class="box-info">
-                                                                    <div class="title">CUSTOM SHORTCODE</div>
+                                                                    <div class="title">CUSTOMIZED DEVELOPMENT</div>
                                                                     <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
                                                                 </div>
                                                             </div>
@@ -221,7 +221,7 @@
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
                                                                 <div class="box-icon"><span class="fa fa-random"></span></div>
                                                                 <div class="box-info">
-                                                                    <div class="title">EASY CUSTOMIZE</div>
+                                                                    <div class="title">SOCIAL MEDIA MANAGEMENT</div>
                                                                     <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
                                                                 </div>
                                                             </div>
@@ -239,8 +239,8 @@
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
                                                                 <div class="box-icon"><span class="fa fa-picture-o"></span></div>
                                                                 <div class="box-info">
-                                                                    <div class="title">PIXEL PERFECT</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="title">THE NERDS</div>
+                                                                    <div class="text">We have great people doing great things. We would love to be doing those things for you.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
