--- a/contact.html
+++ b/contact.html
@@ -265,6 +265,7 @@
     <script src="assets/libs/fancybox/source/jquery.fancybox.pack.js"></script>
     <script src="assets/libs/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
     <!-- LOADING JS FOR PAGE-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu6tm60TzeUo9rWpLnrQ7mrFn4JPMVje4&amp;amp;sensor=false"></script>
     <script src="assets/js/pages/contact.js"></script>
     <!-- MAIN JS-->
     <script src="assets/js/main.js"></script>
