change email and contact info

--- a/contact.html
+++ b/contact.html
@@ -143,13 +143,13 @@
                                                         <div class="text">Contact us for anything: Question, concern, tech support, love advice . . we are here.</div>
                                                         <div class="border-box-contact"></div>
                                                         <div class="item"><i class="fa fa-map-marker"></i>
-                                                            <p>Mark Murphy 11519 Craig Ct, St.Louis, MO 63146</p>
+                                                            <p>11519 Craig Ct, St.Louis, MO 63146</p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-phone"></i>
                                                             <p>(314)288-9810</p>
                                                         </div>
                                                         <div class="item"><i class="fa fa-envelope-o"></i>
-                                                            <p>MarkMurphy@Nerdism.io</p>
+                                                            <p>Info@Nerdism.io</p>
                                                         </div>
                                                     </div>
                                                 </div>
