--- a/about-us.html
+++ b/about-us.html
@@ -135,7 +135,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-4">
-                                                <div class="heading">Who we are?</div>
+                                                <div class="heading">Who are you nerds?</div>
                                                 <div class="text">NERDISM - (noun) The practices or behaviors of nerds; nerdiness.</div>
                                                 <div class="text">We are a creative design and development firm in Saint Louis, founded by people who believe that functionality and beauty can be integrated to make something special we can use to further your business or personal brand.</div>
                                             </div>
